--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "lodash": "^4.17.19",
         "postcss": "^8.4.16",
         "tailwindcss": "^3.1.8"
+    },
+    "dependencies": {
+        "chart.js": "^3.9.1"
     }
 }
